--- a/SpanishPractice/package.json
+++ b/SpanishPractice/package.json
@@ -5,13 +5,14 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint",
     "test:e2e": "vue-cli-service test:e2e",
+    "lint": "vue-cli-service lint",
     "test:e2e-headless": "vue-cli-service test:e2e --headless"
   },
   "dependencies": {
     "core-js": "^3.9.1",
     "vue": "^2.6.12",
+    "vue-router": "^3.5.1",
     "vuex": "^3.6.2"
   },
   "devDependencies": {
@@ -19,6 +20,8 @@
     "@vue/cli-plugin-babel": "^5.0.8",
     "@vue/cli-plugin-e2e-cypress": "^5.0.8",
     "@vue/cli-plugin-eslint": "^5.0.8",
+    "@vue/cli-plugin-router": "~5.0.0",
+    "@vue/cli-plugin-vuex": "~5.0.0",
     "@vue/cli-service": "^5.0.8",
     "@vue/test-utils": "1.1.3",
     "cypress": "8.2.0",
